# ChangeLog for dev-perl/Email-Simple
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/ChangeLog,v 1.52 2010/03/18 19:33:57 darkside Exp $

  18 Mar 2010; Jeremy Olexa <darkside@gentoo.org> Email-Simple-2.100.ebuild:
  add ~x86-solaris ~sparc-solaris kw, as tested on bug 308683

  14 Mar 2010; Torsten Veller <tove@gentoo.org> -Email-Simple-2.005.ebuild:
  Cleanup

  04 Mar 2010; Raúl Porcel <armin76@gentoo.org> Email-Simple-2.100.ebuild:
  alpha stable wrt #304683

  15 Feb 2010; Joseph Jezak <josejx@gentoo.org> Email-Simple-2.100.ebuild:
  Marked ppc/ppc64 stable for bug #304683.

  15 Feb 2010; Raúl Porcel <armin76@gentoo.org> Email-Simple-2.100.ebuild:
  alpha/ia64/sparc stable wrt #304683

  14 Feb 2010; Torsten Veller <tove@gentoo.org> Email-Simple-2.100.ebuild:
  Stable on amd64 and x86 (#304683)

  19 Nov 2009; Torsten Veller <tove@gentoo.org> Email-Simple-2.100.ebuild:
  Merge depends of dev-perl/Email-Simple-Creator (#293684)

  11 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
  Email-Simple-2.100.ebuild:
  Upstream merged Email-Simple-Creator into Email-Simple.

*Email-Simple-2.100 (10 Nov 2009)

  10 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
  +Email-Simple-2.100.ebuild:
  Version bump via perl-bump experimental tool.

  12 Oct 2009; Torsten Veller <tove@gentoo.org> -Email-Simple-2.003.ebuild:
  Cleanup

  18 Sep 2009; Torsten Veller <tove@gentoo.org> Email-Simple-2.005.ebuild:
  Stable on amd64 (#284069)

  15 Sep 2009; Joseph Jezak <josejx@gentoo.org> Email-Simple-2.005.ebuild:
  Marked ppc stable for bug #284069.

  14 Sep 2009; Tom Gall <tgall@gentoo.org> mail-Simple-2.005.ebuild:
  stable on ppc64, bug #284069

  11 Sep 2009; Raúl Porcel <armin76@gentoo.org> Email-Simple-2.005.ebuild:
  alpha/ia64/sparc stable wrt #284069

  10 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  Email-Simple-2.005.ebuild:
  stable x86, bug 284069
