@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Email-Simple
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/ChangeLog,v 1.52 2010/03/18 19:33:57 darkside Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-Simple/ChangeLog,v 1.53 2011/08/31 10:46:40 tove Exp $
+
+*Email-Simple-2.100.0 (31 Aug 2011)
+
+  31 Aug 2011; Torsten Veller <tove@gentoo.org> +Email-Simple-2.100.0.ebuild:
+  Change version scheme
 
   18 Mar 2010; Jeremy Olexa <darkside@gentoo.org> Email-Simple-2.100.ebuild:
   add ~x86-solaris ~sparc-solaris kw, as tested on bug 308683
